<resources>
    <string name="app_name">SQlitePractica5</string>
    <string name="id_peluche">Id Peluche</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="valor">Valor:</string>
    <string name="total">Total:</string>
    <string name="agregar">Agrega</string>
    <string name="buscar">Busca</string>
    <string name="eliminar">Elimina</string>
    <string name="actualizar">Actualiza</string>
    <string name="datos">Ver Inventario</string>
    <string name="regresar">Regresar</string>
    <string name="venta">Venta</string>
    <string name="calcular">Calcular</string>
    <string name="aceptar">Aceptar</string>
    <string name="ver">Ver</string>

</resources>
